# rust-email_address

./: .gitignore  .travis.yml  CONTRIBUTING.md  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: rust.yml  security-audit.yml  typos.yml
src/: lib.rs
