[package]
name = "type-email-address"
version = "0.3.0"
description = "A Rust crate providing an implementation of an RFC-compliant `EmailAddress` newtype. "
documentation = "https://docs.rs/type-email-address/"
repository = "https://github.com/areweat/type-email-address.git"
edition = "2021"
license = "MIT"
readme = "README.md"
publish = true

[features]
alloc = []
std = []

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }
